make sure the hidden input isn't off screen (checkbox edition)

--- a/src/components/Checkbox.scss
+++ b/src/components/Checkbox.scss
@@ -1,6 +1,7 @@
 @import '~@nti/style-common';
 
 label.checkbox-component {
+	position: relative;
 	line-height: 1; // fixes a safari issue where clicking the label doesn't affect the checkbox
 	input[type='checkbox'] {
 		opacity: 0;
